[gd_scene load_steps=13 format=2]

[ext_resource path="res://Images/blue.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Canvas.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Items/Paint.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Spawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Items/Star.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Items/Mode.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Items/Bomb.tscn" type="PackedScene" id=7]
[ext_resource path="res://Images/flames.png" type="Texture" id=8]
[ext_resource path="res://Images/redbrick.png" type="Texture" id=10]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float speed = 2;
uniform float mult = 0.005;

void fragment(){

	vec2 offset;
	offset.x = sin(FRAGCOORD.y * 0.05) * sin(TIME * speed) * mult + sin(TIME * speed) * mult;
	offset.y = 0.0;
	
	vec4 through = vec4(1, 1, 1, (cos(TIME) / 4.0) + .75);
	
	COLOR = texture(TEXTURE, UV + offset);
	COLOR *= through;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/speed = 2.0
shader_param/mult = 0.005

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("bg1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("bg2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Canvas" type="Node2D"]
script = ExtResource( 2 )

[node name="bg3" type="Sprite" parent="."]
texture = ExtResource( 10 )
offset = Vector2( 3840, -600 )
region_enabled = true
region_rect = Rect2( 0, 0, 7680, 1200 )

[node name="bg1" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 3840, -600 )
region_enabled = true
region_rect = Rect2( 0, 0, 7680, 1200 )

[node name="bg2" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
material = SubResource( 2 )
texture = ExtResource( 8 )
offset = Vector2( 3840, -600 )
region_enabled = true
region_rect = Rect2( 0, 0, 7680, 1200 )

[node name="Strokes" type="Node2D" parent="."]

[node name="Stage1" type="Node2D" parent="."]

[node name="Stage2" type="Node2D" parent="."]
position = Vector2( 5000, 0 )

[node name="Stage3" type="Node2D" parent="."]
position = Vector2( 10000, 0 )

[node name="PaintSpawner" parent="." instance=ExtResource( 4 )]
id = 1
min_time = 4.0
max_time = 7.0
a = ExtResource( 3 )

[node name="SpeedSpawner" parent="." instance=ExtResource( 4 )]
mode_mode = 2
min_time = 3.0
max_time = 9.0

[node name="ModeSpawner" parent="." instance=ExtResource( 4 )]
id = 2
min_time = 12.0
max_time = 22.0
a = ExtResource( 6 )
enabled = false

[node name="StarSpawner" parent="." instance=ExtResource( 4 )]
id = 3
mode_mode = 2
min_time = 2.0
a = ExtResource( 5 )

[node name="BombSpawner" parent="." instance=ExtResource( 4 )]
id = 4
mode_mode = 1
min_time = 3.0
max_time = 6.0
max_at_once = 2
a = ExtResource( 7 )

[node name="BombSpawner2" parent="." instance=ExtResource( 4 )]
id = 4
mode_mode = 1
min_time = 2.0
max_time = 4.0
a = ExtResource( 7 )
enabled = false

[node name="BombSpawner3" parent="." instance=ExtResource( 4 )]
id = 4
min_time = 8.0
max_time = 14.0
a = ExtResource( 7 )
enabled = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/mode = SubResource( 3 )
[connection signal="spawn" from="PaintSpawner" to="." method="on_spawn"]
[connection signal="spawn" from="SpeedSpawner" to="." method="on_spawn"]
[connection signal="spawn" from="ModeSpawner" to="." method="on_spawn"]
[connection signal="spawn" from="StarSpawner" to="." method="on_spawn"]
[connection signal="spawn" from="BombSpawner" to="." method="on_spawn"]
[connection signal="spawn" from="BombSpawner2" to="." method="on_spawn"]
[connection signal="spawn" from="BombSpawner3" to="." method="on_spawn"]
